Closed Bug 420261 Opened 16 years ago Closed 16 years ago

"Recent Tags" is not properly refreshed when a new tag is added

Categories

(Firefox :: Bookmarks & History, defect, P2)

defect

Tracking

()

VERIFIED FIXED
Firefox 3 beta5

People

(Reporter: ondrej, Assigned: ondrej)

Details

Attachments

(1 file)

This has been found after fixing the bug 419866, but it is a separate problem.
Flags: blocking-firefox3?
This happens for the first tagging action you are doing after the start of Firefox. The next ones are working.

Steps:
1. Create a new profile
2. Bookmark a page and set a tag => Recent tags is empty
3. Delete the bookmark
4. Bookmark the same page again and give the same tag

Now the recent tags menu contains shows up the new tag.
Flags: blocking-firefox3? → blocking-firefox3+
Priority: -- → P2
Target Milestone: --- → Firefox 3
Both "Recent Tags" and individual tag containers seems to be correctly refreshed now.
Attachment #307539 - Flags: review?(dietrich)
Comment on attachment 307539 [details] [diff] [review]
Change update requirement for tags query

r=me, thanks.
Attachment #307539 - Flags: review?(dietrich) → review+
Keywords: checkin-needed
Checking in toolkit/components/places/src/nsNavHistory.cpp;
/cvsroot/mozilla/toolkit/components/places/src/nsNavHistory.cpp,v  <--  nsNavHistory.cpp
new revision: 1.269; previous revision: 1.268
done
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Verified with:

Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b5pre) Gecko/2008030804 Minefield/3.0b5pre ID:2008030804

Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b5pre) Gecko/2008030806 Minefield/3.0b5pre ID:2008030806
Status: RESOLVED → VERIFIED
Target Milestone: Firefox 3 → Firefox 3 beta5
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".

In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body   contains   places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.

Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.

Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: