Bug 420261 ? "Recent Tags" is not properly refreshed when a new tag is added (for ondrej@allpeers.com, r=dietrich)